logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-02T070000+0000/task_id=Load_songplays_fact_table/attempt=1.log
[2025-07-24T13:52:31.437+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T07:00:00+00:00 [queued]>
[2025-07-24T13:52:31.458+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T07:00:00+00:00 [queued]>
[2025-07-24T13:52:31.459+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T13:52:31.476+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 07:00:00+00:00
[2025-07-24T13:52:31.483+0000] {standard_task_runner.py:60} INFO - Started process 401 to run task
[2025-07-24T13:52:31.486+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T07:00:00+00:00', '--job-id', '351', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp9lc7bhav']
[2025-07-24T13:52:31.490+0000] {standard_task_runner.py:88} INFO - Job 351: Subtask Load_songplays_fact_table
[2025-07-24T13:52:31.564+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T07:00:00+00:00 [running]> on host a4bcda7cb679
[2025-07-24T13:52:31.638+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T07:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T07:00:00+00:00'
[2025-07-24T13:52:31.645+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 168, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 127, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T13:52:31.660+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T070000, start_date=20250724T135231, end_date=20250724T135231
[2025-07-24T13:52:31.678+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 351 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 401)
[2025-07-24T13:52:31.700+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T13:52:31.729+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T16:04:51.441+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T07:00:00+00:00 [queued]>
[2025-07-24T16:04:51.455+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T07:00:00+00:00 [queued]>
[2025-07-24T16:04:51.456+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T16:04:51.474+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 07:00:00+00:00
[2025-07-24T16:04:51.484+0000] {standard_task_runner.py:60} INFO - Started process 1657 to run task
[2025-07-24T16:04:51.488+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T07:00:00+00:00', '--job-id', '1308', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp06gbn_5z']
[2025-07-24T16:04:51.493+0000] {standard_task_runner.py:88} INFO - Job 1308: Subtask Load_songplays_fact_table
[2025-07-24T16:04:51.579+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T07:00:00+00:00 [running]> on host c53547d84df1
[2025-07-24T16:04:51.694+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T07:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T07:00:00+00:00'
[2025-07-24T16:04:51.815+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T16:04:51.832+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T070000, start_date=20250724T160451, end_date=20250724T160451
[2025-07-24T16:04:51.908+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T16:04:51.947+0000] {taskinstance.py:3280} INFO - 4 downstream tasks scheduled from follow-on schedule check
[2025-07-24T17:17:47.878+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T07:00:00+00:00 [queued]>
[2025-07-24T17:17:47.900+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T07:00:00+00:00 [queued]>
[2025-07-24T17:17:47.901+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T17:17:47.924+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 07:00:00+00:00
[2025-07-24T17:17:47.940+0000] {standard_task_runner.py:60} INFO - Started process 1465 to run task
[2025-07-24T17:17:47.947+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T07:00:00+00:00', '--job-id', '2078', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpmz6zr_5x']
[2025-07-24T17:17:47.954+0000] {standard_task_runner.py:88} INFO - Job 2078: Subtask Load_songplays_fact_table
[2025-07-24T17:17:48.092+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T07:00:00+00:00 [running]> on host 5def55d2a1b5
[2025-07-24T17:17:48.230+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T07:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T07:00:00+00:00'
[2025-07-24T17:17:48.941+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T17:17:48.955+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T070000, start_date=20250724T171747, end_date=20250724T171748
[2025-07-24T17:17:49.008+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T17:17:49.048+0000] {taskinstance.py:3280} INFO - 4 downstream tasks scheduled from follow-on schedule check
